[tool.poetry]
name = "gcp-tools"
version = "0.1.0"
description = ""
authors = ["VitaminB16 <artemiy.nosov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
